[tool.poetry]
name = "adventofcode2022"
version = "0.1.0"
description = ""
authors = ["Michael Caley <mjcaley@darkarctic.com>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"

[tool.poetry.scripts]
part1 = "adventofcode2022.part1.main:run1"
part1_2 = "adventofcode2022.part1.main:run2"
part2 = "adventofcode2022.part2.main:run1"
part2_2 = "adventofcode2022.part2.main2:run"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
