[tool.poetry]
name = "adventofcode2022"
version = "0.1.0"
description = ""
authors = ["Michael Caley <mjcaley@darkarctic.com>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"

[tool.poetry.scripts]
day1_1 = "adventofcode2022.day1.main:run1"
day1_2 = "adventofcode2022.day1.main:run2"
day2_1 = "adventofcode2022.day2.main:run1"
day2_2 = "adventofcode2022.day2.main2:run"
day3_1 = "adventofcode2022.day3.main1:run"
day3_2 = "adventofcode2022.day3.main2:run"
day4_1 = "adventofcode2022.day4.main1:run"
day4_2 = "adventofcode2022.day4.main2:run"
day5_1 = "adventofcode2022.day5.main1:run"
day5_2 = "adventofcode2022.day5.main2:run"
day6_1 = "adventofcode2022.day6.main1:run"
day6_2 = "adventofcode2022.day6.main2:run"
day7_1 = "adventofcode2022.day7.main1:run"
day7_2 = "adventofcode2022.day7.main2:run"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
